@@ -1,4 +1,4 @@
-DIST biber-1.5.tar.gz 1969067 SHA256 1155702c854a3479434e6431e2c1ef9425f9e027c7821981b67e2e928008eff3 SHA512 3945f80ad583c18b48cfc1bc3e8d74fc7a811915e26208cde3fdb3e587aa4d4d3b54583ab803d56f0c7f6be6160f4cb8cf221889b852c31bb9368749b426b10c WHIRLPOOL a518451031c48a2505df3df82bc7f8012762b2911cbc889cf62246a008217655336da4ece0b891681d50399e1e93470b736ec4b0f8c8c320d1a7fdfa207bdcbe
-EBUILD biber-1.5.ebuild 1174 SHA256 39ab0c6641ebfaf475b90375c260f3869be87184ed2e5a52f6d5b98ea257b305 SHA512 b0b17179698965ff0294203caeda593201291e2f165e30c1d39fe4ca177e35c02a03e33ee4ff96a5c723973401ea323565e5cc65c81fafa37c7fe36779c0a68a WHIRLPOOL 07ae48bc6ad5368bbbc1e1d09d629a52760f2e3d64b7e1599bc4faa5e324a18e27c897d53f1f096a81b249dcce718f4a51edcbb0227e1348e3d11ef313ecb5f9
-MISC ChangeLog 830 SHA256 413ac8d004c91e4534a8b7d23b888b78e9585c314582f65e6bdf3918152a9b91 SHA512 83f2dd5f9225137beb2e628a6d709b3b5926f43cbfa9c10d81623ad1710fd884d2eab772019b88198a47d7046c40443cf21bf580ed6bb5f857870c2f3469cfe2 WHIRLPOOL cb855376716a92cb2c20ba2254df10dbe5b5b8bce78fd85e44747f33b5c8846a7168717ff85b5e697b3926e7823e4791417ec1d1d6ec3953a9cfddafbdc9f39b
+DIST biber-1.6.tar.gz 2007701 SHA256 bcebd322ad54b6285a0bbbd7851a2f578d44642b31d2ace4c19a7682a1b9a143 SHA512 0a35a15a73f86b4759d2629bc20454e9b626838623e4991009fe74ec015c06162fe1619c8bc586e2f77d4abb1b42062736acc0efdb451fa944da965c359ec6a4 WHIRLPOOL 9caf49df91b421c3760f7b44f40673440de32459fd1ad27d761021328ddfff6b2439510e747cf46ebb3563c5eb105de2e2a8e3afa83f32fed9548f7079df88a4
+EBUILD biber-1.6.ebuild 1305 SHA256 6b67e27da9ef3ba1c1a1a02a507a484fced7c62cdbc6ed48c3d158cd04dcf288 SHA512 f508ad5fc632effcb1068e9feb1a3306d89a2173e23f4f7fbbf7657076ae1215e2f98879278add63955925c7a2b50df03f3ab4c6a8d6bef141f49de95c2afa32 WHIRLPOOL 0cd14a6570aa825ccd8a5aa6d591de7bb279640c961f548763921887a87c5997e296166d3e8d5acbee6eeb5f88bd3afe41915b3fb348a09cffe6ea2ed8264df0
+MISC ChangeLog 979 SHA256 2fc267ee0018540ab397189610dfd4c0e2bc4bd809c6fe10664e83cc15739869 SHA512 00113af087113eb317749917e3bb6c587f2d6f17b651b27d133e6b5d1a204f7c1b7e9c5c02661e4fa284240a56a052bb06ed95013a683d07cb5ee13673a40515 WHIRLPOOL 2e24785ba26bbc07b55a166a97c3eeac729a8bc70e8370273014b759ea4dce6d7bc9c0bd6c9cea78769cf34240fca88be8cd987c1ffdac959b6a2354deeb6d27
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
