@@ -1,3 +1,9 @@
+*biber-1.6 (01 May 2013)
+
+  01 May 2013; Manuel Rueger (mrueg) gentoo@rueg.eu +biber-1.6.ebuild,
+  -biber-1.5.ebuild:
+  dev-tex/biber: Version bump
+
   20 Jan 2013; Manuel Rueger (mrueg) gentoo@rueg.eu biber-1.5.ebuild:
   dev-tex/biber: Raise biblatex dep
 
